--- a/org.onetwo.eclipse.codegen/generator.properties
+++ b/org.onetwo.eclipse.codegen/generator.properties
@@ -1,29 +1,29 @@
-#Mon May 28 09:29:36 CST 2012
+#Wed Jun 27 20:43:26 CST 2012
 db.config=
-jdbc.password=
+jdbc.password=zjk2012
 dao.className.postfix=Dao
 jdbc.url=
 model.package=${base.pageckage}.entity
 encoding=utf-8
-jdbc.username=root
+jdbc.username=zjk
 component.PrimaryKeyFactory=org.onetwo.core.codegenerator.impl.DefaultPrimaryKeyFactory
 service.package=${base.pageckage}.service
 serviceImpl.className.postfix=SLSB
 model.template=entity.ftl
 serviceImpl.package=${base.pageckage}.service.impl
-db.name=todo2
+db.name=db.yooyo.local
 dao.template=dao.ftl
 template.dir=E\:\\mydev\\java_workspace\\new_yooyo\\car\\ejb\\codegen
 component.PrimaryKey=org.onetwo.core.codegenerator.db.meta.PrimaryKey
 dao.package=${base.pageckage}.dao
-generate.out.dir=E\:\\mydev\\java_workspace\\new_yooyo\\car\\ejb\\src\\test\\java
-db.type=mysql
+generate.out.dir=E\:\\test
+db.type=oracle
 model.className.postfix=Entity
 generate.tables=
 service.template=service.ftl
-db.port=3306
-table.prefix=ZJK_
+db.port=1521
 service.className.postfix=Local
-db.host=localhost
+table.prefix=ZJK_
 base.pageckage=org.onetwo.test2
+db.host=db-cluster-scan.yooyo.local
 serviceImpl.template=service_impl.ftl
